Stable versions
---------------

3.5.0 ():

3.4.1 (20110813):
	- test for unused but set variable warning in gcc (needed to
	  build on MacOS X, reported by Misty De Meo)
	- fix format specifiers in CoreAudio driver messages (reported
	  by Misty De Meo)
	- build audacious3 driver if system has Audacious 2.5
	- change dependency generation flags for clang (reported by Misty
	  De Meo)
	- fix OXM module loading

3.4.0 (20110808):
	- fix reported elapsed time with looped modules
	- fix portamento of mapped instruments (reported by Null Vista)
	- add MED2 (MED 1.12) module support
	- add Noiserunner module support
	- add support for MED4 synth instruments (reported by Tim Newsham)
	- fix MED4 Soundtracker-compatible tempo setting (Song2.med)
	- fix Audacious plugin crash if module is invalid (reported by
	  Dominik Mierzejewski)
	- fix Audacious plugin seek widget position setting
	- remove nonexistent Modplug Tracker IT quirk (reported by Johannes
	  Schultz, voice samples shouldn't play in Deep in Her Eyes remake)
	- fix Startrekker Packer loader
	- fix IT215 compressed sample loader (reported by Ben "GreaseMonkey"
	  Russell)
	- use start/stoptimer also for pause in OSS driver (by Test Rat)
	- identify modules created with munch.py in IT loader
	- OctaMED MMD0/1/2/3 tempo fixes (by Francis Russell)
	- MMD0/1 note limit fix (by Francis Russell)
	- improve latency in ALSA driver output
	- Audacious 2.4 API 17 plugin fixes
	- add Audacious 3.0 plugin (by Michael Schwendt)

3.3.0 (20101202):
	- change MED BPM mode tempo setting (reported by Lorence Lombardo)
	- fix OSS driver fragment setting
	- add interactive loop toggle (requested by Emanuel Haupt)
	- add filter to prevent loading NoiseRunner modules as Protracker
	- add NoiseRunner loader (requested by Johan Samuelsson)
	- add improved Impulse Tracker fingerprinting (from Schism Tracker)
	- add Archimedes Tracker StasisMod effects support (Tom Hargreaves)
	- add tarball decompressor (Tom Hargreaves)